[tool.poetry]
name = "adventofcode23"
version = "0.1.0"
description = "Attempts at solving puzzles using Python"
authors = ["Tony <51972581+tony1658@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
